--- a/packages/core/design-tokens/tokens/themes/_violet-dark.scss
+++ b/packages/core/design-tokens/tokens/themes/_violet-dark.scss
@@ -8,6 +8,8 @@ $violet-dark: (
   "background-neutral-regular-hover": $greyscale-550,
   "background-neutral-bold-default": $greyscale-200,
   "background-neutral-bold-hover": $greyscale-50,
+  "background-neutral-navigation-default": $greyscale-50,
+  "background-neutral-navigation-hover": $greyscale-100,
   "background-disabled": $greyscale-800,
   "background-inverse": $core-white,
   "background-brand-default": $violet-300,
@@ -20,6 +22,9 @@ $violet-dark: (
   "background-brand-inverse-default": $greyscale-900,
   "background-brand-inverse-hover": $violet-700,
   "background-brand-inverse-pressed": $violet-600,
+  "background-brand-navigation-default": $violet-950,
+  "background-brand-navigation-hover": $violet-900,
+  "background-brand-navigation-active": $violet-700,
   "background-danger-default": $rouge-indications-400,
   "background-danger-hover": $rouge-indications-300,
   "background-danger-pressed": $rouge-indications-200,
@@ -40,10 +45,38 @@ $violet-dark: (
   "border-inverse": $greyscale-900,
   "border-brand-default": $violet-0,
   "border-brand-focused": $violet-0,
+  "border-navigation-active": $violet-700,
+  "border-brand-navigation-divider": $violet-800,
   "border-danger": $rouge-indications-400,
   "border-info": $bleu-digital-500,
   "border-warning": $jaune-indications-400,
   "border-success": $vert-digital-600,
+  "content-primary": $core-white,
+  "content-secondary": $greyscale-100,
+  "content-tertiary": $greyscale-300,
+  "content-primary-inverse": $greyscale-900,
+  "content-disabled": $greyscale-700,
+  "content-brand-navigation-default": $violet-100,
+  "content-brand-navigation-hover": $violet-50,
+  "content-brand-navigation-disabled": $violet-700,
+  "content-brand-default": $violet-0,
+  "content-brand-hover": $violet-50,
+  "content-brand-press": $violet-100,
+  "content-link-default": $bleu-digital-500,
+  "content-link-hover": $bleu-digital-400,
+  "content-link-press": $bleu-digital-300,
+  "content-link-visited": $violet-500,
+  "content-link-visited-hover": $violet-400,
+  "content-link-visited-press": $violet-300,
+  "content-danger": $rouge-indications-400,
+  "content-danger-hover": $rouge-indications-500,
+  "content-danger-inverse": $core-white,
+  "content-success": $vert-digital-400,
+  "content-success-hover": $vert-digital-500,
+  "content-info": $bleu-digital-400,
+  "content-info-hover": $bleu-digital-500,
+  "content-decorative": $greyscale-900,
+  "content-status": $greyscale-900,
   "chart-brand": $violet-600,
   "chart-neutral": $greyscale-350,
   "chart-category-1": $bleu-iceberg-500,
@@ -94,29 +127,6 @@ $violet-dark: (
   "chart-greyscale-bold": $greyscale-550,
   "chart-taupe": $taupe-200,
   "chart-taupe-bold": $taupe-600,
-  "content-primary": $core-white,
-  "content-secondary": $greyscale-100,
-  "content-tertiary": $greyscale-300,
-  "content-primary-inverse": $greyscale-900,
-  "content-disabled": $greyscale-700,
-  "content-brand-default": $violet-0,
-  "content-brand-hover": $violet-50,
-  "content-brand-press": $violet-100,
-  "content-link-default": $bleu-digital-500,
-  "content-link-hover": $bleu-digital-400,
-  "content-link-press": $bleu-digital-300,
-  "content-link-visited": $violet-500,
-  "content-link-visited-hover": $violet-400,
-  "content-link-visited-press": $violet-300,
-  "content-danger": $rouge-indications-400,
-  "content-danger-hover": $rouge-indications-500,
-  "content-danger-inverse": $core-white,
-  "content-success": $vert-digital-400,
-  "content-success-hover": $vert-digital-500,
-  "content-info": $bleu-digital-400,
-  "content-info-hover": $bleu-digital-500,
-  "content-decorative": $greyscale-900,
-  "content-status": $greyscale-900,
   "decorative-neutral": $greyscale-50,
   "decorative-bleu-iceberg": $bleu-iceberg-200,
   "decorative-vert-foret": $vert-foret-100,
