--- a/test-apps/angular/src/app/app.component.html
+++ b/test-apps/angular/src/app/app.component.html
@@ -1,3 +1,7 @@
+<div rteDropdown>
+  <rte-button rteDropdownTrigger label="Dropdown"/>
+  <rte-dropdown-menu [items]="dropdownItems"/>
+</div>
 <rte-banner
   type="default"
   message="This is an info banner"
