deploy: e978b0549178ddd5945408af4e80d6777ea6e14a

--- a/preview/tab/angular/components/tab/tab.component.html
+++ b/preview/tab/angular/components/tab/tab.component.html
@@ -44,8 +44,8 @@
       <rte-dropdown
         *ngIf="shouldDisplayDropdown() && options().length > 0"
         #dropdown="rteDropdown"
+        aria-label="Select tab"
         [autoclose]="true"
-        [ariaLabel]="'Select tab'"
         [offset]="10"
       >
         <button
@@ -64,7 +64,6 @@
           <rte-badge
             *ngIf="
               selectedTab()?.badgeCount &&
-              selectedTab()?.badgeCount! > 0 &&
               selectedTab()?.badgeAppearance === 'text'
             "
             [badgeType]="selectedTab()?.badgeType!"
