--- a/preview/tab/angular/components/tab/tab.component.html
+++ b/preview/tab/angular/components/tab/tab.component.html
@@ -22,7 +22,6 @@
         direction() === 'horizontal' ? 'arrow-chevron-left' : 'arrow-chevron-up'
       "
       [ngStyle]="{
-        'z-index': 11,
         opacity: canScrollBackward() ? '1' : '0',
         'pointer-events': canScrollBackward() ? 'auto' : 'none',
       }"
@@ -106,7 +105,6 @@
           : 'arrow-chevron-down'
       "
       [ngStyle]="{
-        'z-index': 11,
         opacity: canScrollForward() ? '1' : '0',
         'pointer-events': canScrollForward() ? 'auto' : 'none',
       }"
@@ -119,8 +117,6 @@
     role="presentation"
     [attr.data-direction]="direction()"
     [attr.data-compact-spacing]="compactSpacing()"
-    [attr.data-scrollable]="
-      isScrollable() && overflowType() === 'scrollable' ? true : undefined
-    "
+    [attr.data-scrollable]="isScrollable() && overflowType() === 'scrollable'"
   ></div>
 </div>
