refactor(tab): remove unnecessary size and padding properties

--- a/packages/angular/projects/ds-rte-lib/src/lib/components/tab/tab.component.scss
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/tab/tab.component.scss
@@ -23,6 +23,7 @@
   scrollbar-width: none;
   width: 100%;
   padding-top: 2px;
+  padding-left: 2px;
   align-items: center;
 
   &[data-direction='horizontal'] {
@@ -30,6 +31,7 @@
 
     &[data-overflow-type='dropdown'] {
       overflow: hidden;
+      margin-left: 0;
     }
   }
 
@@ -38,7 +40,6 @@
     border-bottom: none;
     gap: $positive-spacing_050;
     height: 100%;
-    padding-left: 2px;
     padding-right: 2px;
     margin-left: -2px;
     width: max-content;
@@ -112,7 +113,8 @@
 
   &:focus-visible {
     outline: 2px solid var(--border-brand-focused);
-    outline-offset: 8px;
+    outline-offset: 12px;
+    z-index: $level-0 + 1;
   }
 
   &[data-inverted='true'] {
