--- a/packages/angular/projects/ds-rte-lib/src/lib/components/tab/tab.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/tab/tab.component.html
@@ -17,7 +17,6 @@
       *ngIf="isScrollable() && !shouldDisplayDropdown()"
       aria-label="Previous tabs"
       variant="transparent"
-      size="l"
       [name]="
         direction() === 'horizontal' ? 'arrow-chevron-left' : 'arrow-chevron-up'
       "
@@ -76,6 +75,7 @@
           *ngFor="let option of dropdownFilteredOptions()"
           [label]="option?.label || ''"
           [leftIcon]="option.icon"
+          [disabled]="option.disabled || false"
           (click)="onClickTabItem(option.id)"
         ></rte-dropdown-item>
       </rte-dropdown>
@@ -98,7 +98,6 @@
       *ngIf="isScrollable() && !shouldDisplayDropdown()"
       aria-label="Next tabs"
       variant="transparent"
-      size="l"
       [name]="
         direction() === 'horizontal'
           ? 'arrow-chevron-right'
