--- a/packages/react/src/components/tab/Tab.module.scss
+++ b/packages/react/src/components/tab/Tab.module.scss
@@ -14,7 +14,6 @@
 .tab {
   position: relative;
   display: flex;
-  height: 100%;
   gap: $positive-spacing_300;
   justify-content: flex-start;
   padding-bottom: 2px;
@@ -32,6 +31,7 @@
 
     &[data-overflow-type='dropdown'] {
       overflow: hidden;
+      margin-left: 0
     }
   }
 
@@ -39,14 +39,11 @@
     flex-direction: column;
     border-bottom: none;
     gap: $positive-spacing_050;
-    height: 100%;
-    padding-left: 2px;
-    padding-right: 2px;
-    margin-left: -2px;
     width: max-content;
     align-items: start;
     margin-bottom: 0px;
     overflow-y: scroll;
+    padding-top: 0px;
 
     .tab-selected-indicator {
       width: 2px;
@@ -115,7 +112,8 @@
 
   &:focus-visible {
     outline: 2px solid var(--border-brand-focused);
-    outline-offset: 8px;
+    outline-offset: 12px;
+    z-index: $level-0 + 1;
   }
 
   &[data-inverted='true'] {
