deploy: 49e393ac00696dd1c7c708978cf3cee9e276ceab

--- a/preview/tab/angular/components/tab/tab.component.html
+++ b/preview/tab/angular/components/tab/tab.component.html
@@ -75,6 +75,7 @@
           *ngFor="let option of dropdownFilteredOptions()"
           [label]="option?.label || ''"
           [leftIcon]="option.icon"
+          [disabled]="option.disabled || false"
           (click)="onClickTabItem(option.id)"
         ></rte-dropdown-item>
       </rte-dropdown>
