deploy: 611fa3f17028f7e05bc4a4e49c7c9876b7665c2c

--- a/angular/components/badge/badge.component.scss
+++ b/angular/components/badge/badge.component.scss
@@ -54,6 +54,7 @@
         top: -4px;
         right: -4px;
         padding: $positive-spacing_0 $positive-spacing_025;
+
         &.count-overflow {
             padding: $positive-spacing_0 $positive-spacing_050;
         }
@@ -67,13 +68,18 @@
         top: -8px;
         right: -8px;
         padding: $positive-spacing_0 $positive-spacing_050;
+
         &.count-overflow {
             padding: $positive-spacing_0 $positive-spacing_075;
         }
     }
 
+    &[data-simple-badge='true'] {
+        position: static;
+        box-shadow: none;
+    }
+
     .badge-text {
         margin: 0;
     }
-
 }
