--- a/packages/angular/projects/ds-rte-lib/src/lib/components/link/link.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/link/link.component.html
@@ -1,6 +1,13 @@
-<a href="{{ href() }}" class="rte-link" role="link" [ngClass]="{'subtle': subtle()}" [target]="externalLink() ? '_blank' : undefined" [rel]="externalLink() ? 'noopener noreferrer' : null">
-    <span class="rte-link-label">
-        {{ label() }}
-    </span>
-    <rte-icon *ngIf="externalLink()" name="external-link" [size]="12"></rte-icon>
+<a
+  href="{{ href() }}"
+  class="rte-link"
+  role="link"
+  [ngClass]="{ subtle: subtle(), reverse: reverse() }"
+  [target]="externalLink() ? '_blank' : undefined"
+  [rel]="externalLink() ? 'noopener noreferrer' : null"
+>
+  <span class="rte-link-label">
+    {{ label() }}
+  </span>
+  <rte-icon *ngIf="externalLink()" name="external-link" [size]="12"></rte-icon>
 </a>
