--- a/packages/angular/projects/ds-rte-lib/src/lib/components/link/link.component.scss
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/link/link.component.scss
@@ -104,5 +104,43 @@
                 border-radius: $radius-s;
             }
         }
+
+        &.reverse {
+            color: var(--content-primary-inverse);
+            text-decoration: none;
+
+            &:hover {
+                color: var(--content-primary-inverse);
+                text-decoration: underline;
+            }
+
+            &:focus-visible {
+                color: var(--content-primary-inverse);
+                text-decoration: underline;
+                outline: 1px solid var(--border-brand-focused);
+                outline-offset: $radius-s;
+                border-radius: $radius-s;
+            }
+        }
+    }
+
+
+
+    &.reverse {
+        color: var(--content-primary-inverse);
+        text-decoration: underline;
+
+        &:hover {
+            color: var(--content-primary-inverse);
+            text-decoration: none;
+        }
+
+        &:focus-visible {
+            color: var(--content-primary-inverse);
+            text-decoration: underline;
+            outline: 1px solid var(--border-brand-focused);
+            outline-offset: $radius-s;
+            border-radius: $radius-s;
+        }
     }
 }
