--- a/packages/react/src/components/tag/Tag.module.scss
+++ b/packages/react/src/components/tag/Tag.module.scss
@@ -11,6 +11,7 @@
     text-wrap: nowrap;
 
     &[data-compact-spacing="true"] {
+        padding: $positive-spacing_0 $positive-spacing_075;
         height: 24px;
     }
 
@@ -18,6 +19,10 @@
         padding: $positive-spacing_0 $positive-spacing_075;
         @include typography-text-l;
         color: var(--content-status);
+
+        &[data-compact-spacing="true"] {
+            @include typography-text-m
+        }
     }
 
     &[data-tag-type="status"] {
