--- a/packages/react/src/components/divider/Divider.module.scss
+++ b/packages/react/src/components/divider/Divider.module.scss
@@ -1,6 +1,6 @@
 @use '@design-system-rte/core/design-tokens/main.scss' as *;
 
-.horizontal{
+.horizontal {
     border: none;
     padding: 0;
     margin: 0;
@@ -24,6 +24,10 @@
 
     &[data-appearance='inverse'] {
         border-top-color: var(--border-inverse);
+    }
+
+    &[data-appearance='brand'] {
+        border-top-color: var(--border-brand-default);
     }
 }
 
@@ -51,5 +55,9 @@
 
     &[data-appearance='inverse'] {
         background-color: var(--border-inverse);
+    }
+
+    &[data-appearance='brand'] {
+        background-color: var(--border-brand-default);
     }
 }
