--- a/packages/angular/projects/ds-rte-lib/src/lib/components/dropdown/dropdown-item/dropdown-item.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/dropdown/dropdown-item/dropdown-item.component.html
@@ -11,7 +11,10 @@
     >
       <span *ngIf="item()?.hasIndent && !item()?.leftIcon" style="width: 20px"></span>
       <rte-icon *ngIf="item()?.leftIcon" [name]="item()?.leftIcon ?? ''" />
-      <span style="flex: 2">{{ item()?.label }}</span>
+      <ng-container [ngSwitch]="!!item()?.link">
+        <a *ngSwitchCase="true" style="flex: 2; text-decoration: none; color: inherit" [href]="item()?.link">{{ item()?.label }} </a>
+        <span *ngSwitchDefault style="flex: 2">{{ item()?.label }}</span>
+      </ng-container>
       <div *ngIf="item()?.trailingText">{{ item()?.trailingText }}</div>
     </li>
     <div *ngIf="item()?.hasSeparator" class="dropdown-divider">
