fix(split button): remove unused selected props + change focus behavior type on focus-visible

--- a/packages/react/src/components/splitButton/SplitButton.module.scss
+++ b/packages/react/src/components/splitButton/SplitButton.module.scss
@@ -86,7 +86,7 @@
             cursor: not-allowed;
         }
 
-        &:focus {
+        &:focus-visible {
             outline: none;
             position: relative;
             z-index: 1;
@@ -192,7 +192,7 @@
             cursor: not-allowed;
         }
 
-        &:focus {
+        &:focus-visible {
             outline: none;
             position: relative;
             z-index: 1;
