feat(split button): enhance keyboard navigation

--- a/packages/angular/projects/ds-rte-lib/src/lib/components/split-button/split-button.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/split-button/split-button.component.html
@@ -25,6 +25,7 @@
     style="height: 100%"
     [rteDropdownPosition]="internalPosition()"
     [rteDropdownAlignment]="internalAlignment()"
+    [attr.data-testid]="'Menu container'"
   >
     <button
       class="split-button-right size-{{ size() }}"
@@ -32,6 +33,7 @@
       data-testid="Menu button"
       type="button"
       aria-haspopup="menu"
+      [attr.data-expanded]="isOpen()"
       [attr.aria-expanded]="isOpen()"
       [attr.aria-label]="ariaLabelRight()"
       [disabled]="disabled()"
