--- a/preview/dsr-408/angular/components/split-button/split-button.component.scss
+++ b/preview/dsr-408/angular/components/split-button/split-button.component.scss
@@ -146,7 +146,8 @@
             background-color: var(--background-brand-hover);
         }
 
-        &:active {
+        &:active,
+        &[data-expanded="true"] {
             background-color: var(--background-brand-pressed);
         }
 
