feat(dropdown): add trigger props to allow arrow down key to open the dropdown

--- a/packages/angular/projects/ds-rte-lib/src/lib/components/split-button/split-button.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/split-button/split-button.component.html
@@ -30,6 +30,7 @@
     <button
       class="split-button-right size-{{ size() }}"
       rteDropdownTrigger
+      [rteDropdownTriggerActivateWithArrowDown]="true"
       data-testid="Menu button"
       type="button"
       aria-haspopup="menu"
