deploy: b2d474b45c1f9375543aebe70279bf4b606cfba1

--- a/preview/dsr-408/angular/components/split-button/split-button.component.html
+++ b/preview/dsr-408/angular/components/split-button/split-button.component.html
@@ -33,6 +33,7 @@
       data-testid="Menu button"
       type="button"
       aria-haspopup="menu"
+      [rteDropdownTriggerActivateWithArrowDown]="true"
       [attr.data-expanded]="isOpen()"
       [attr.aria-expanded]="isOpen()"
       [attr.aria-label]="ariaLabelRight()"
