--- a/packages/react/src/components/modal/Modal.module.scss
+++ b/packages/react/src/components/modal/Modal.module.scss
@@ -76,16 +76,12 @@
         text-overflow: ellipsis;
         flex: 1 1 0;
       }
-
-      .close-icon {
-        color: var(--content-tertiary);
-      }
     }
   }
 
   .modal-content {
     display: flex;
-    padding: $positive-spacing_0;
+    padding: 1px;
     flex-direction: column;
     align-items: flex-start;
     gap: $positive-spacing_200;
